fix news flip card overflow, fix search cards not scrolling

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -7,6 +7,7 @@ html {
     font-size: 10px;
     body {
         font-family: 'Raleway', 'sans-serif';
+        overflow: hidden;
         height: 100vh;
     }
     h2 {
@@ -31,7 +32,7 @@ html {
 }
 
 *::-webkit-scrollbar {
-    visibility: hidden;
+    display: none;
 }
 
 .clearfix:after {
